<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#95673AB7"
    tools:context=".Example4">

    <EditText
        android:id="@+id/edit_site1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_website_link"/>
    <Button
        android:id="@+id/btn_open_website1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_website"/>
    <EditText
        android:id="@+id/edit_site2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_coordinates"/>
    <Button
        android:id="@+id/btn_open_website2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/open_location"/>
    <EditText
        android:id="@+id/share_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/share_this_text"/>
    <Button
        android:id="@+id/btn_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_share"/>

    <Button
        android:id="@+id/btn_pic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/take_a_picture"/>

</LinearLayout>